# tiwave

./: .gitignore  CITATION  README.md  environment.yml  environment_full.yml  pyproject.toml  sync.sh
examples/: basic_usage.ipynb  checking_waveforms.ipynb  modify_xas.ipynb
examples/check_waveforms/: phenomxp.ipynb
tests/: comparing.py  comparing_lal.py  lalsim_debug_info.py  mismatch.py  mismatch_bilby.py  mismatch_int_amp.ipynb  mismatch_int_amp_old.ipynb  perf_cpu.py  perf_gpu.py  perf_gpu_bbhx.py  perf_gpu_ripple.py  perf_gpu_ti.py  perf_tests_plot.py  run_perf_cpu.sh  run_perf_gpu.sh  t0_test.py  test_IMRPhenomD.py
tests/old/: perf_gpu_ti.py  run_perf_gpu.sh  test.py
tiwave/: common.py  utilities.py  utils.py
tiwave/waveforms/: IMRPhenomD.py  IMRPhenomX.py  IMRPhenomXAS.py  IMRPhenomXHM.py  IMRPhenomXPHM.py  __init__.py  base_waveform.py  common.py
wf4ti/: constants.py  utilities.py
wf4ti/waveform/: IMRPhenomD.py
wf4ti/waveforms/: IMRPhenomD.py
wf4ti/wavefrom/: IMRPhenomD.py
